--- a/flink-sql-client/conf/sql-client-conf.yaml
+++ b/flink-sql-client/conf/sql-client-conf.yaml
@@ -30,8 +30,8 @@ execution:
   result-mode: table           # 'changelog' or 'table' presentation of results
   parallelism: 1               # parallelism of the program
   max-parallelism: 128         # maximum parallelism
-  min-idle-state-retention: 0  # minimum idle state retention in ms
-  max-idle-state-retention: 0  # maximum idle state retention in ms
+  # min-idle-state-retention: 0  # minimum idle state retention in ms
+  # max-idle-state-retention: 0  # maximum idle state retention in ms
 
 #==============================================================================
 # Deployment properties
